create github pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-rPodXapsm5 mbr-fullscreen mbr-parallax-background" id="header2-3">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rPodXapsm5 mbr-fullscreen mbr-parallax-background" id="header2-3">
 
     
 
@@ -305,7 +305,7 @@
             <div class="media-content px-3 align-self-center mbr-white py-2">
                 <p class="mbr-text testimonial-text mbr-fonts-style display-7">Работаю фотографом. Работаю в &nbsp;полиграфии. Продаю работы на стоках.</p>
                 <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">Сергей</p>
-                <p class="mbr-author-desc mbr-fonts-style display-7">Фотограф-Илюстратор</p>
+                <p class="mbr-author-desc mbr-fonts-style display-7">Фотограф-Иллюстратор</p>
             </div>
 
             <div class="mbr-figure pl-lg-5" style="width: 65%;">
